@@ -142,6 +142,12 @@
     , "RL_BLEND_COLOR" : "0x8005"
     , "RL_READ_FRAMEBUFFER" : "0x8CA8"
     , "RL_DRAW_FRAMEBUFFER" : "0x8CA9"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION" : "0"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD" : "1"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL" : "2"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR" : "3"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
     , "RL_SHADER_LOC_MAP_DIFFUSE" : null
     , "RL_SHADER_LOC_MAP_SPECULAR" : null
     , "CONFIG_H" : null
@@ -174,12 +180,6 @@
     , "MAX_CHAR_PRESSED_QUEUE" : "16"
     , "MAX_DECOMPRESSION_SIZE" : "64"
     , "MAX_AUTOMATION_EVENTS" : "16384"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION" : "0"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD" : "1"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL" : "2"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR" : "3"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION" : "\"vertexPosition\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD" : "\"vertexTexCoord\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL" : "\"vertexNormal\""
